--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-flip-move": "^3.0.3",
+    "react-loading": "^2.0.3",
     "react-scripts": "2.1.8"
   },
   "scripts": {
